deploy/ledger.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      labels:
        app: ledger-api
    spec:
      serviceAccountName: ledger-api-sa
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ledger-api
          image: ghcr.io/mitesh12ehd/ledger-api:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 100
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api
spec:
  selector:
    app: ledger-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api
  namespace: payments

spec:
  ingressClassName: nginx
  rules:
  - host: ledger.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ledger-api
              port:
                number: 8080
